// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and remove reaction: Respected 1`] = `
<button
  aria-label="Respected"
  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton CommentContainer-actionButton coral-reactedButton coral-comment-reactedButton ReactionButton-button"
  data-testid="comment-reaction-button"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <i
      aria-hidden="true"
      className="Icon-root Icon-sm ReactionButton-icon ReactionButton-reacted"
    >
      thumb_up
    </i>
    <span
      className="ReactionButton-totalReactions ReactionButton-reacted"
    >
      1
    </span>
  </span>
</button>
`;

exports[`create and remove reaction: Unrespected 1`] = `
<button
  aria-label="Respect"
  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
  data-testid="comment-reaction-button"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <i
      aria-hidden="true"
      className="Icon-root Icon-sm ReactionButton-icon"
    >
      thumb_up
    </i>
  </span>
</button>
`;
